Build Tailwind CSS voor prod

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Avenix website - Gecompileerde Tailwind CSS",
   "scripts": {
+    "build": "npm run build:css",
     "build:css": "tailwindcss -i ./src/input.css -o ./css/tailwind.css --minify",
     "watch:css": "tailwindcss -i ./src/input.css -o ./css/tailwind.css --watch"
   },
